# emb-rest-scotty

./: .ghci  .gitignore  Main.hs  README.md  emb-rest.cabal  index.html  notes.org  postgresql.config  postgresqlconfig  run.sh
config/: posgreSQL.yml  settings.yml
content/css/: bootstrap.css  bootstrap.min.css  styles.css
content/scripts/common/: ajax.js  extensions.js  helpers.js  validation.extension.js
content/scripts/entity/: order.js  person.js  product.js
content/scripts/jquery/: jquery-ui-1.10.2.js  jquery.to.json.js  jquery.validate.js  jquery.validate.unobtrusive.js
src/: Config.hs  Entity.hs  Rendering.hs  Views.hs
src/DB/: Core.hs  DB.hs  Dao.hs  Migrate.hs  PostgreSQL.hs  SchemeQuery.hs  Seeds.hs
src/Db/: Postgre.hs
src/Emb/: Types.hs
src/Emb/Entity/: Newtypes.hs  Person.hs  Product.hs  User.hs
src/Entity/: Newtypes.hs  Order.hs  Person.hs  Product.hs
src/Init/: Config.hs  Types.hs
src/Lucid/: Customs.hs  Helper.hs  Validation.hs
src/Migrate/: Loader.hs  PostgreSQL.hs
src/Views/: About.hs  Order.hs  Person.hs  Product.hs
src/entity/: User.hs
