name:          emb-rest
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple


executable          emb-rest
    hs-source-dirs: ., src
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty >= 0.10.2 && < 0.11
                  , aeson  >= 0.6    && < 0.12
                  , postgresql-simple >= 0.5.1.2 && < 0.6
                  , configurator      >=0.3
                  , text              >=1.2
                  , resource-pool     >=0.2.3.2
                  -- logStdout
                  , wai-extra         >=3.0.7   
                  , transformers 
                  , bytestring 
                  , yaml

